# shaders-wgsl

./: play.ipynb  pyproject.toml  shaders.ipynb
