[project]
name = "shaders-wgsl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter-rfb>=0.4.4",
    "jupyter>=1.1.1",
    "numpy>=2.2.1",
    "wgpu-shadertoy>=0.1.0",
    "pillow>=11.0.0",
    "glfw>=2.8.0",
    "jupyterlab>=4.3.4",
    "jupyterlab-vim>=4.1.4",
]
